--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div class="navlinks">
 <a href="index.html">HOME</a>
 <a href="about.html">ABOUT</a>
-<a href="menu.html">MENU</a>
+/*<a href="menu.html">MENU</a>*/
 <a href="booking.html">RESERVATION</a>
 <a href="contact.html">CONTACT</a>
 </div>
